<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/name"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/b1"
        android:text="@string/Guardian"
        android:layout_marginLeft="57dp"
        android:layout_below="@+id/name" />

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/b2"
        android:text="@string/NasaDay"
        android:layout_toRightOf="@+id/b1"
        android:layout_below="@+id/name"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/b3"
        android:text="@string/NasaEarth"
        android:layout_below="@+id/b1"
        android:layout_marginLeft="57dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/b4"
        android:text="@string/BBC"
        android:layout_toRightOf="@+id/b1"
        android:layout_below="@+id/b2"/>



</RelativeLayout>