<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/guardian_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardian_details"
        android:textAlignment="center"
        android:textSize="15pt"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/favourite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guardian_details"
        android:text="@string/guardian_title"
        android:textSize="10pt"/>

    <TextView
        android:id="@+id/favourite_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourite_title"
        android:text="@string/guardian_url"
        android:autoLink="web"
        android:linksClickable="true"
        android:textSize="10pt"/>
    <TextView
        android:id="@+id/favourite_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favourite_url"
        android:text="@string/guardian_section"
        android:textSize="10pt"/>


</RelativeLayout>