<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:id="@+id/nasaImage"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitude"
        android:text="@string/earthlat"
        android:textSize="20dp"
        android:layout_below="@+id/nasaImage"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude"
        android:text="@string/earthlon"
        android:textSize="20dp"
        android:layout_below="@+id/latitude"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        android:text="@string/earthdate"
        android:textSize="20dp"
        android:layout_below="@+id/longitude"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/earthre"
        android:layout_below="@+id/date"
        android:id="@+id/reButton"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_toRightOf="@+id/reButton"
        android:layout_marginLeft="50dp"
        android:text="@string/earthsave"
        android:layout_marginTop="10dp"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/progress1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
