<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NasaEarthDetailsFragment"
    android:id="@+id/earthFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:id="@+id/detailEarthImage"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailEarthLat"
        android:text="@string/earthlat"
        android:textSize="20dp"
        android:layout_below="@+id/earthImage"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailEarthLon"
        android:text="@string/earthlon"
        android:textSize="20dp"
        android:layout_below="@+id/earthlat"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailEarthDate"
        android:text="@string/earthdate"
        android:textSize="20dp"
        android:layout_below="@+id/earthlon"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/earthhide"
        android:id="@+id/detailEarthHide"
        android:background="#C2E9F8"
        android:textColor="#494646"
        />

</LinearLayout>