<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:id="@+id/fragmentLocation">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/nasaDayImageFragment"
        android:layout_width="150dp"
        android:layout_height="195dp"/>

    <TextView
        android:id="@+id/myfavoriteDateFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/nasaDayImageFragment"
        android:text="@string/dateTextView"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/myfavoriteTitleFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/nasaDayImageFragment"
        android:layout_below="@+id/myfavoriteDateFragment"
        android:text="@string/titleTextView"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/myfavoriteUrlFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/nasaDayImageFragment"
        android:layout_below="@+id/myfavoriteTitleFragment"
        android:text="@string/urlTextView"
        android:autoLink="web"
        android:linksClickable="true"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/myfavoriteHDUrlFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/nasaDayImageFragment"
        android:layout_below="@+id/myfavoriteUrlFragment"
        android:text="@string/hdurlTextView"
        android:autoLink="web"
        android:linksClickable="true"
        android:textStyle="bold"
        android:textSize="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/NasaDayFragmentButton"
        android:id="@+id/NasaDayFragmentButton"/>

</RelativeLayout>
